--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -58,23 +58,23 @@
     <string name="recents_clear_all_title">Verwijder alle recente taken</string>
 
     <string name="fix_datetime_crash_title">Fix Date&amp;Time settings crash</string>
-    <string name="fix_datetime_crash_summary">Enable in case you experience crash while accessing Date&amp;Time settings (requires reboot)</string>
+    <string name="fix_datetime_crash_summary">Enable in case you experience crash while accessing Date&amp;Time settings (vereist herstart)</string>
 
-    <string name="fix_caller_id_phone_title">Fix caller ID for phone</string>
-    <string name="fix_caller_id_phone_summary">Enable in case your contact is not matched when receiving call (requires reboot)</string>
+    <string name="fix_caller_id_phone_title">Verhelp beller-ID voor GSM</string>
+    <string name="fix_caller_id_phone_summary">Enable in case your contact is not matched when receiving call (vereist herstart)</string>
     <string name="fix_caller_id_phone_alert">After reboot, you should clear and re-add your contacts for change to take effect! Use Settings / Applications / All - to clear data of Contacts provider.</string>
 
-    <string name="fix_caller_id_mms_title">Fix caller ID for messages</string>
-    <string name="fix_caller_id_mms_summary">Enable in case you experience splitted conversation threads for the same contact (requires reboot)</string>
+    <string name="fix_caller_id_mms_title">Verhelp beller-ID voor berichten</string>
+    <string name="fix_caller_id_mms_summary">Enable in case you experience splitted conversation threads for the same contact (vereist herstart)</string>
     <string name="fix_caller_id_mms_alert">After reboot, you should delete all splitted threads in messaging app for change to take effect!</string>
 
-    <string name="fix_calendar_title">Fix calendar app</string>
-    <string name="fix_calendar_summary">Enable in case you experience periodic self-turning on of the screen (requires reboot)</string>
+    <string name="fix_calendar_title">Verhelp kalender app</string>
+    <string name="fix_calendar_summary">Schakel in in het geval dat je ondervindt dat je scherm uit zichzelf oplicht (vereist herstart)</string>
 
     <string name="important">Belangrijk</string>
 
-    <string name="caller_fullscreen_photo_title">Volledig scherm beller foto</string>
-    <string name="caller_fullscreen_photo_summary">Geeft volledigscherm beller foto op inkomende oproepen</string>
+    <string name="caller_fullscreen_photo_title">Volledig scherm beller-foto</string>
+    <string name="caller_fullscreen_photo_summary">Geeft volledigscherm beller-foto op inkomende oproepen</string>
 
     <!-- QuickSettings strings -->
     <string name="quick_settings_sync_on">Synchr. aan</string>
@@ -96,8 +96,8 @@
     <string name="quick_settings_stay_awake_off">Wakker Blijven uit</string>
 
     <!--  QuickSettings settings -->
-    <string name="quick_settings_title">Statusbar QuickSettings tegels</string>
-    <string name="quick_settings_summary">Maakt het mogelijk om QuickSettings tegels weergeven of verbergen in statusbar</string>
+    <string name="quick_settings_title">Statusbar QuickSettings panelen</string>
+    <string name="quick_settings_summary">Maakt het mogelijk om QuickSettings panelen weergeven of verbergen in statusbar</string>
     <string name="qs_tile_user_profile">Gebruikers profiel</string>
     <string name="qs_tile_airplane_mode">Vliegtuig modus</string>
     <string name="qs_tile_battery">Batterij status</string>
@@ -133,28 +133,28 @@
     <string name="statusbar_bgcolor_summary">Maakt het mogelijk om statusbar achtergrond kleur en transparantie instellen</string>
 
     <!--  Fix speech settings -->
-    <string name="fix_tts_settings_title">Fix spraak instellingen</string>
-    <string name="fix_tts_settings_summary">Ontsluit voice search en text-to-speech instellingen in Taal&amp;Invoer (vereist herstart)</string>
+    <string name="fix_tts_settings_title">Verhelp spraak instellingen</string>
+    <string name="fix_tts_settings_summary">Ontgrendelt voice search en text-to-speech instellingen in Taal&amp;Invoer (vereist herstart)</string>
 
     <!--  Advanced developer options -->
     <string name="fix_dev_opts_title">Geavanceerde ontwikkelaars opties</string>
-    <string name="fix_dev_opts_summary">Ontgrendelt geavanceerde developer opties (vereist herstart)</string>
+    <string name="fix_dev_opts_summary">Ontgrendelt geavanceerde ontwikkelaars opties (vereist herstart)</string>
 
     <!-- Main preference categories -->
     <string name="pref_cat_statusbar_title">Statusbalk tweaks</string>
     <string name="pref_cat_statusbar_summary">Bevat verschillende statusbalk tweaks</string>
     <string name="pref_cat_misc_title">Diverse tweaks</string>
-    <string name="pref_cat_misc_summary">Bevat alle andere tweaks die niet in bepaalde categorie horen</string>
-    <string name="pref_cat_fixes_title">Generale fixes</string>
-    <string name="pref_cat_fixes_summary">Bevat algemene MTK6589 specifieke fixes. Gebruik alleen als nodig is.</string>
+    <string name="pref_cat_misc_summary">Bevat alle andere tweaks die niet tot een bepaalde categorie horen</string>
+    <string name="pref_cat_fixes_title">Algemene verhelpingen</string>
+    <string name="pref_cat_fixes_summary">Bevat algemene verhelpingen voor MTK6589. Gebruik alleen als het nodig is.</string>
 
     <!-- About -->
-    <string name="pref_cat_about_title">About</string>
-    <string name="about_gb_summary">Coded by C3C076@XDA. Touch to visit official thread.</string>
+    <string name="pref_cat_about_title">Informatie over</string>
+    <string name="about_gb_summary">Gecodeerd door C3C076@XDA. Raak aan om de officiële thread te bezoeken.</string>
     <string name="about_xposed_title">Xposed framework</string>
-    <string name="about_xposed_summary">Coded by rovo89@XDA. Touch to visit official thread.</string>
-    <string name="about_donate_title">Donate</string>
-    <string name="about_donate_summary">Donate to me if you think this app is worth it! Also consider donating to rovo89 for his excellent Xposed framework.</string>
+    <string name="about_xposed_summary">Gecodeerd door rovo89@XDA. Raak aan om de officiële thread te bezoeken.</string>
+    <string name="about_donate_title">Doneer</string>
+    <string name="about_donate_summary">Doneer als je denkt dat deze app het waard is!Overweeg ook om te doneren aan rovo89 voor al zijn prachtig werk met Xposed framework.</string>
 
     <!-- Reboot confirmation -->
     <string name="reboot_confirm">Uw %s wilt herstarten.</string>
@@ -171,7 +171,7 @@
 
     <!-- Dual SIM ringer -->
     <string name="dual_sim_ringer_title">Dual SIM Ringer</string>
-    <string name="dual_sim_ringer_summary">Launches application that allows to set ringtone and notification sounds separately for each SIM</string>
+    <string name="dual_sim_ringer_summary">Lanceert applicatie dat u toestaat om uw ringtone en meldingengeluid te veranderen apart voor elke SIM-kaart</string>
 
     <!--  Lockscreen tweaks -->
     <string name="pref_cat_lockscreen_title">Vergendelscherm tweaks</string>
@@ -181,86 +181,86 @@
     <string name="lockscreen_bg_default">Standaard achtergrond</string>
     <string name="lockscreen_bg_color">Kleur vullen</string>
     <string name="lockscreen_bg_image">Eigen foto</string>
-    <string name="pref_lockscreen_bg_color_title">Set custom color</string>
-    <string name="pref_lockscreen_bg_color_summary">Allows to set custom background color for lockscreen</string>
-    <string name="pref_lockscreen_bg_image_title">Set custom image</string>
-    <string name="pref_lockscreen_bg_image_summary">Allows to set custom background image for lockscreen</string>
+    <string name="pref_lockscreen_bg_color_title">Kies eigen kleur</string>
+    <string name="pref_lockscreen_bg_color_summary">Maakt het mogelijk om een eigen achtergrondkleur te kiezen voor het vergrendelscherm</string>
+    <string name="pref_lockscreen_bg_image_title">Kies eigen foto</string>
+    <string name="pref_lockscreen_bg_image_summary">Maakt het mogelijk om een eigen fot als achtergrond te gebruiken voor het vergrendelscherm</string>
     <string name="lockscreen_background_result_successful">Achtergrond veranderd</string>
     <string name="lockscreen_background_result_not_successful">Achtergrond niet veranderd</string>
     <string name="pref_cat_lockscreen_other_title">Andere</string>
-    <string name="pref_lockscreen_maximize_widgets_title">Maximize widgets</string>
-    <string name="pref_lockscreen_maximize_widgets_summary">When enabled, lockscreen widgets will be maximized by default</string>
+    <string name="pref_lockscreen_maximize_widgets_title">Maximaliseer widgets</string>
+    <string name="pref_lockscreen_maximize_widgets_summary">Wanneer ingeschakeld, zullen vergrendelscherm widgets gemaximaliseert zijn</string>
 
     <!--  Power tweaks category -->
-    <string name="pref_cat_power_title">Power tweaks</string>
-    <string name="pref_cat_power_summary">Contains various power related tweaks</string>
+    <string name="pref_cat_power_title">Energie tweaks</string>
+    <string name="pref_cat_power_summary">Bevat verscheidene energie gerelateerde tweaks</string>
 
     <!--  Low battery LED flashing -->
-    <string name="pref_flashing_led_disable_title">Disable LED flashing</string>
-    <string name="pref_flashing_led_disable_summary">Disables intrusive LED flashing when battery is low and not charging</string>
+    <string name="pref_flashing_led_disable_title">Schakel LED knipperen uit</string>
+    <string name="pref_flashing_led_disable_summary">Schakelt herhaald LED flikkeren uit wanneer de batterij bijna leeg is en niet aan het opladen is</string>
 
     <!-- Display tweaks category -->
-    <string name="pref_cat_display_title">Display tweaks</string>
-    <string name="pref_cat_display_summary">Contains various display tweaks</string>
+    <string name="pref_cat_display_title">Scherm tweaks</string>
+    <string name="pref_cat_display_summary">Bevat verscheidene scherm tweaks</string>
 
     <!-- Minimum brightness level -->
-    <string name="pref_brightness_min_title">Minimum brightness level</string>
-    <string name="pref_brightness_min_summary">Allows to set minimum brightness level. Applies to manual brightness setting. (requires reboot)</string>
+    <string name="pref_brightness_min_title">Minimaal helderheidslevel</string>
+    <string name="pref_brightness_min_summary">Maakt het mogelijk om het minimale helderheidslevel te kiezen. Wordt toegepast op manuele helderheidsinstellingen (vereist herstart)</string>
 
     <!--  Autobrightness levels -->
-    <string name="pref_ab_title">Autobrightness levels</string>
-    <string name="pref_ab_summary">Allows to set ambient light levels and corresponding LCD backlight values</string>
+    <string name="pref_ab_title">Automatische helderheidslevels</string>
+    <string name="pref_ab_summary">Maakt het mogelijk om licht levels en corresponderende LCD schermlicht waardes te kiezen</string>
     <string name="level">Level</string>
     <string name="pref_ab_lux_max_label">Lux max</string>
-    <string name="pref_ab_brighness_label">Brightness (%d &#8211; 255)</string>
-    <string name="pref_ab_number_error_general">Specified number is not valid</string>
-    <string name="pref_ab_brightness_too_low">It is not recommended to set brightness below %d</string>
-    <string name="pref_ab_brightness_too_high">Brightness cannot be greater than 255</string>
-    <string name="pref_ab_number_error_negative">Values cannot be lower or equal to zero</string>
-    <string name="pref_ab_number_not_ascending">Values on lower levels cannot be greater than values on higher levels</string>
-    <string name="pref_ab_number_not_descending">Values on higher levels cannot be smaller than values on lower levels</string>
-    <string name="pref_ab_values_set">Values for %s set</string>
-    <string name="pref_ab_config_saved">New autobrightness configuration saved</string>
-    <string name="pref_ab_config_cancelled">Autobrightness configuration was NOT saved</string>
+    <string name="pref_ab_brighness_label">Helderheid (%d &#8211; 255)</string>
+    <string name="pref_ab_number_error_general">Gespecifieerd nummer is niet geldig</string>
+    <string name="pref_ab_brightness_too_low">Het is  niet aangeraden om de helderheid lager te zetten dan %d</string>
+    <string name="pref_ab_brightness_too_high">Helderheid kan niet sterker zijn dan 255</string>
+    <string name="pref_ab_number_error_negative">Waarden kunnen niet gelijk of  kleiner zijn dan nul</string>
+    <string name="pref_ab_number_not_ascending">waarden bij lage levels kunnen niet groter zijn dan waarden bij hogere levels</string>
+    <string name="pref_ab_number_not_descending">Waarden bij hoge levels kunnen niet kleiner zijn dan waarden bij lagere levels</string>
+    <string name="pref_ab_values_set">Waarden voor %s zijn gekozen</string>
+    <string name="pref_ab_config_saved">Nieuwe automatische helderheidsconiguratie is opgelsgen</string>
+    <string name="pref_ab_config_cancelled">Automatische helderheidsconfiguratie is NIET opgeslagen</string>
 
     <!-- Lockscreen rotation -->
-    <string name="pref_lockscreen_rotation_title">Enable lockscreen rotation</string>
-    <string name="pref_lockscreen_rotation_summary">WARNING: can swap unlock ring targets on some devices in case AOSP lockscreen has been modified by vendor</string>
+    <string name="pref_lockscreen_rotation_title">Schakel vergrendelscherm rotatie in</string>
+    <string name="pref_lockscreen_rotation_summary">WAARSCHUWING: Dit kan ontgrendel targets verwisselen bij sommige toestellen in het geval dat het standaard vergrendelscherm is gemodifieerd door de fabrikant</string>
 
     <!-- Lockscreen menu key -->
-    <string name="pref_lockscreen_menu_key_title">Enable menu key</string>
-    <string name="pref_lockscreen_menu_key_summary">Allows menu key to be used for quick-unlocking the device while on lockscreen (requires reboot)</string>
+    <string name="pref_lockscreen_menu_key_title">Menutoets inschakelen</string>
+    <string name="pref_lockscreen_menu_key_summary">Maakt het mogelijk om de menutoets te gebruiken om het toestel snel te ontgrendelen (vereist herstart)</string>
 
     <!-- Fix messaging wakelock -->
-    <string name="pref_mms_fix_wakelock_title">Fix messaging wakelock</string>
-    <string name="pref_mms_fix_wakelock_summary">Prevents screen from turning on when new message arrives (requires reboot)</string>
+    <string name="pref_mms_fix_wakelock_title">Verhelp berichtenmelding scherm aan</string>
+    <string name="pref_mms_fix_wakelock_summary">Voorkomt dat het scherm oplicht bij nieuwe meldingen (vereist herstart)</string>
 
     <!-- Statusbar center clock -->
-    <string name="pref_statusbar_center_clock_title">Center clock</string>
+    <string name="pref_statusbar_center_clock_title">Centreer de klok</string>
 
     <!-- Media tweaks category -->
     <string name="pref_cat_media_title">Media tweaks</string>
-    <string name="pref_cat_media_summary">Contains various tweaks for media and audio system</string>
+    <string name="pref_cat_media_summary">Bevat verscheidene tweaks voor media en audio</string>
 
     <!-- More music volume steps -->
-    <string name="pref_music_volume_steps_title">More music volume steps</string>
-    <string name="pref_music_volume_steps_summary">Adds more volume steps for music stream (requires reboot)</string>
+    <string name="pref_music_volume_steps_title">Meer muziekvolume waarden</string>
+    <string name="pref_music_volume_steps_summary">Voegt meer geluidswaarden toe aan het muziekvolume (vereist herstart)</string>
 
     <!-- Safe headset media volume -->
-    <string name="pref_safe_media_volume_title">Safe headset media volume</string>
-    <string name="pref_safe_media_volume_summary">Activates or deactivates safe headset media volume feature</string>
+    <string name="pref_safe_media_volume_title">Veilig hoofdtelefoon volume</string>
+    <string name="pref_safe_media_volume_summary">Activeert of deactiveert het veilige hoofdtelefoonvolume</string>
 
     <!-- Disable charging LED -->
-    <string name="pref_charging_led_disable_title">Disable charging LED</string>
-    <string name="pref_charging_led_disable_summary">Disables LED while charging</string>
+    <string name="pref_charging_led_disable_title">Opladen LED uitschakelen</string>
+    <string name="pref_charging_led_disable_summary">Schakelt LED uit terwijl het opladen</string>
 
     <!-- Hardware key actions -->
-    <string name="pref_cat_hwkey_actions_title">Hardware key actions</string>
-    <string name="pref_cat_hwkey_actions_summary">Allows to set custom actions on hardware keys</string>
-    <string name="hwkey_menu_longpress_dialog_title">Menu key long-press action</string>
-    <string name="hwkey_menu_doubletap_dialog_title">Menu key double-tap action</string>
-    <string name="hwkey_back_longpress_dialog_title">Back key long-press action</string>
-    <string name="hwkey_action_default">Default</string>
+    <string name="pref_cat_hwkey_actions_title">Hardware knoppen acties</string>
+    <string name="pref_cat_hwkey_actions_summary">Maakt het mogelijk om eigen acties te koppelen aan hardware knoppen</string>
+    <string name="hwkey_menu_longpress_dialog_title">Lang drukken op de munetoets</string>
+    <string name="hwkey_menu_doubletap_dialog_title">Dubbeltappen op de menutoets</string>
+    <string name="hwkey_back_longpress_dialog_title">Lang drukken op de terugtoets</string>
+    <string name="hwkey_action_default">Standaard</string>
     <string name="hwkey_action_search">Search</string>
     <string name="hwkey_action_voice_search">Voice search</string>
     <string name="hwkey_action_prev_app">Switch to previous app</string>
